# SdfSampler

./: .gitignore  README.md  pyproject.toml
.github/workflows/: python-package.yaml
SdfSampler/: plotting.py  sdf_sampler.py
SdfSampler/geometries/: microstructures.py
examples/: example.py
tests/: test_sampling.py  test_sdf_from_mesh.py  test_sdf_functions.py
